--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,13 +2,25 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/WebApi1",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:55374",
-      "sslPort": 0
+      "sslPort": 44312
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
+    "IIS": {
+      "commandName": "IIS",
+      "launchBrowser": true,
+      "launchUrl": "http://localhost/WebApi1",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
@@ -30,7 +42,6 @@
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast",
-      "environmentVariables": {},
       "httpPort": 55377
     }
   }
